--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 body{
     max-width: 600px;
     margin: 0 auto;
-    background-color:#e5e5e5;
+    background-color: black;
     font-family: "Roboto";
 }
 
 .container{
-    height: 100vh;
     position: relative;
+    background-color:#e5e5e5;
 }
 
 /* 1 - TOPO */
@@ -49,8 +49,58 @@ body{
 
 .conteudo{
     width: 100%;
-    height: 50px;
-    padding-top: 122px;
+    padding: 120px 19px;
+}
+
+.conteudo h1{
+    font-family: "Righteous";
+    font-size: 26px;
+    margin-top: 27px;
+}
+
+.conteudo h2{
+    font-size: 16px;
+    font-weight: 700;
+    color: #333333;
+}
+
+.conteudo h3{
+    font-size: 15px;
+    font-weight: 400;
+    color: #000000;
+}
+
+.conteudo p{
+    font-size: 14px;
+    font-weight: 300;
+    color: #a6a6a6;
+}
+
+.conteudo img{
+    width: 144px;
+    height: 87px;
+    border-radius: 4px;
+    object-fit: cover;
+}
+
+.produtos{
+    overflow-x: scroll;
+    display: flex;
+    margin-top: 17px;
+}
+
+.produtos div{
+    width: 172px;
+    min-width: 172px;
+    height: 216px;
+    background-color: #ffffff;
+    border-radius: 9px;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
+    margin-right: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 18px 14px 13px 14px;
 }
 
 /* 3 - BASE */
